# NovaBox

./: .dockerignore  .gitignore  LICENSE  README.md
.github/workflows/: publish-production-images.yml
backend/: .gitignore  Cargo.toml  Dockerfile.dev  entrypoint-dev.sh
backend/.cargo/: config.toml
backend/migrations/: 001_init.sql  002_server_members.sql
backend/src/: auth.rs  config.rs  db.rs  main.rs  mc_ping.rs  rcon.rs  state.rs  velocity.rs
backend/src/api/: auth.rs  backups.rs  files.rs  logs.rs  metrics.rs  mod.rs  models.rs  moderation.rs  modrinth.rs  players.rs  servers.rs  settings.rs  users.rs
backend/src/docker/: mod.rs  monitor.rs
backend/src/ws/: mod.rs
deploy/local/: docker-compose.yml
deploy/local/master/: Dockerfile
deploy/local/panel/: Dockerfile
deploy/local/velocity/: Dockerfile
deploy/production/master/: Dockerfile
deploy/production/panel/: Dockerfile
deploy/production/velocity/: Dockerfile
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ConsolePanel.tsx  InfoRow.tsx  MetricCard.tsx  ServerCard.tsx  SettingRow.tsx  Sidebar.tsx  StatusBadge.tsx  Toggle.tsx  TopBar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useConsole.ts  useServers.ts
frontend/src/pages/: Analytics.tsx  ConsolePage.tsx  Dashboard.tsx  Login.tsx  ModBrowser.tsx  NewServer.tsx  Players.tsx  ServerDetail.tsx  Servers.tsx  Settings.tsx  (+2 more)
velocity-plugin/: Dockerfile  Dockerfile.velocity  pom.xml
(+14 files in other folders)
