[package]
name = "novabox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "novabox"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
bollard = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
argon2 = { version = "0.5", features = ["std"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util  = { version = "0.7", features = ["io"] }
urlencoding = "2"
zip         = { version = "2", default-features = false, features = ["deflate"] }
